# all-in-one-fix

./: LICENSE  NATTEN_COMPATIBILITY_TEST.md  PACKAGE_STRUCTURE.md  PREPUBLISH_CHECKLIST.md  PYPI_RECOMMENDATIONS.md  README.md  RELEASE_SUMMARY.md  USER_INSTALLATION_GUIDE.md  install.sh  pyproject.toml  setup.py  test_natten_compatibility.py
.github/: PYPI_SETUP.md  PYPI_TRUSTED_PUBLISHING_SETUP.md
.github/workflows/: publish.yml
docs/: IMPROVEMENTS.md  INTEGRATION.md  PACKAGE_STRUCTURE.md  PYPI_FIRST_PUBLISH.md  PYPI_PUBLISHING.md  PYPI_TRUSTED_PUBLISHER_SETUP.md  README.md  RELEASE_SUMMARY.md  USAGE_EXAMPLES.md
examples/: custom_separation_example.py
src/allin1fix/: __init__.py  sonify.py  stems.py
src/allin1fix/models/: dinat.py
src/allin1fix/separation/: __init__.py  inference.py  pretrained.py  repo.py
src/allin1fix/separation/core/: __init__.py
src/allin1fix/separation/models/: __init__.py  compat.py  demucs.py  hdemucs.py  htdemucs.py
tests/: test_natten_code_analysis.py  test_original_comparison.py
