[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allin1fix"
dynamic = ["version"]
description = "All-In-One Music Structure Analyzer with source separation"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = "MIT"
keywords = ["music", "beat", "downbeat", "tracking", "structure", "analysis", "allin1fix", "source-separation"]
authors = [
  { name = "Taejun Kim", email = "taejun@kaist.ac.kr" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "librosa",
  "natten==0.17.5",
  "hydra-core",
  "omegaconf",
  "huggingface_hub",
  "matplotlib",
  "madmom @ git+https://github.com/CPJKU/madmom",
  # Source separation (demucs-infer brings: torch, torchaudio, julius, lameenc, diffq, einops, openunmix)
  "demucs-infer",
]

[project.optional-dependencies]
train = [
  "lightning",
  "timm",
  "wandb",
  "mir_eval",
  "numpy<1.24", # otherwise, mir_eval will raise AttributeError: module 'numpy' has no attribute 'int'
]

[project.urls]
Documentation = "https://github.com/ChenPaulYu/all-in-one-fix#readme"
Issues = "https://github.com/ChenPaulYu/all-in-one-fix/issues"
Source = "https://github.com/ChenPaulYu/all-in-one-fix"

[project.scripts]
allin1fix = "allin1fix.cli:main"
allin1fix-train = "allin1fix.training.train:main"
allin1fix-preprocess = "allin1fix.training.preprocess:main"

[tool.hatch.version]
path = "src/allin1fix/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/allin1fix"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
demucs-infer = { git = "https://github.com/ChenPaulYu/demucs-infer.git" }
