[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allin1fix"
dynamic = ["version"]
description = "All-In-One Music Structure Analyzer with source separation"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
# Note: license-files automatically includes LICENSE by default
authors = [
  { name = "Taejun Kim", email = "taejun@kaist.ac.kr" },
]
maintainers = [
  { name = "worzpro Development Team" },
]
keywords = ["music", "beat", "downbeat", "tracking", "structure", "analysis", "allin1fix", "source-separation"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies
dependencies = [
  "numpy",
  "librosa",
  "natten>=0.17.5",  # Supports 0.17.5 (PyTorch 2.0+) through 0.21.0+ (PyTorch 2.7.0+)
  "hydra-core",
  "omegaconf",
  "huggingface_hub",
  "matplotlib",
  "madmom @ git+https://github.com/CPJKU/madmom",
  # Source separation (demucs-infer brings: torch, torchaudio, julius, lameenc, diffq, einops, openunmix)
  "demucs-infer @ git+https://github.com/openmirlab/demucs-infer.git",
]

[project.optional-dependencies]
train = [
  "lightning",
  "timm",
  "wandb",
  "mir_eval",
  "numpy<1.24", # otherwise, mir_eval will raise AttributeError: module 'numpy' has no attribute 'int'
]
# Development dependencies
dev = [
  "black",
  "ruff",
]

[project.scripts]
allin1fix = "allin1fix.cli:main"
allin1fix-train = "allin1fix.training.train:main"
allin1fix-preprocess = "allin1fix.training.preprocess:main"

[project.urls]
Homepage = "https://github.com/openmirlab/all-in-one-fix"
Repository = "https://github.com/openmirlab/all-in-one-fix"
Documentation = "https://github.com/openmirlab/all-in-one-fix#readme"
"Bug Reports" = "https://github.com/openmirlab/all-in-one-fix/issues"
"Original All-In-One" = "https://github.com/mir-aidj/all-in-one"
Changelog = "https://github.com/openmirlab/all-in-one-fix/blob/main/docs/CHANGELOG.md"

[tool.hatch.version]
path = "src/allin1fix/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/allin1fix"]

[tool.hatch.build.targets.sdist]
packages = ["src/allin1fix"]

[tool.hatch.metadata]
allow-direct-references = true
