[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allin1fix"
dynamic = ["version"]
description = "All-In-One Music Structure Analyzer with source separation"
readme = "README.md"
requires-python = ">=3.9"  # scipy>=1.13 and madmom require Python>=3.9
license = {text = "MIT"}
# Note: license-files automatically includes LICENSE by default
authors = [
  { name = "Taejun Kim", email = "taejun@kaist.ac.kr" },
]
maintainers = [
  { name = "Package Maintainers" },
]
keywords = ["music", "beat", "downbeat", "tracking", "structure", "analysis", "allin1fix", "source-separation"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies
# IMPORTANT: torch MUST be listed before natten for proper installation order
# natten requires torch during build, so torch must be installed first
dependencies = [
  "numpy",
  "librosa",
  "torch>=2.0.0",  # Required FIRST for natten build; also brought by demucs-infer but made explicit
  "natten==0.17.5",  # NATTEN 0.17.5 verified with PyTorch 2.0-2.7+; 0.20+ requires wrapper updates
  "hydra-core",
  "omegaconf",
  "huggingface_hub",
  "matplotlib",
  "scipy>=1.0.0",  # scipy 1.13+ requires Python 3.9+, but madmom requires scipy>=1.13
  # Note: madmom must be installed separately from git (see README.md for installation instructions)
  # PyPI does not allow direct git dependencies in dependencies field
  # Source separation (demucs-infer brings: torch, torchaudio, julius, lameenc, diffq, einops, openunmix)
  "demucs-infer",
]

[project.optional-dependencies]
train = [
  "lightning",
  "timm",
  "wandb",
  "mir_eval",
  "numpy<1.24", # otherwise, mir_eval will raise AttributeError: module 'numpy' has no attribute 'int'
]
# Development dependencies
dev = [
  "black",
  "ruff",
]

[project.scripts]
allin1fix = "allin1fix.cli:main"
allin1fix-train = "allin1fix.training.train:main"
allin1fix-preprocess = "allin1fix.training.preprocess:main"

[project.urls]
Homepage = "https://github.com/openmirlab/all-in-one-fix"
Repository = "https://github.com/openmirlab/all-in-one-fix"
Documentation = "https://github.com/openmirlab/all-in-one-fix#readme"
"Bug Reports" = "https://github.com/openmirlab/all-in-one-fix/issues"
"Original All-In-One" = "https://github.com/mir-aidj/all-in-one"
Changelog = "https://github.com/openmirlab/all-in-one-fix/blob/main/docs/CHANGELOG.md"

[tool.hatch.version]
path = "src/allin1fix/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/allin1fix"]

[tool.hatch.build.targets.sdist]
packages = ["src/allin1fix"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
override-dependencies = [
  "scipy>=1.13.0",  # madmom requires scipy>=1.13, which requires Python 3.9+
]
